ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/PolyGlot/llvm/set-5/file_polyglot_012698.c.log
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-5$ (ulimit -St 45 -Sf 90000; clang-12 -w -O2 -pedantic file_polyglot_012698.c)
file_polyglot_012698.c:2:17: error: member reference type 'int' is not a pointer
 X1 = 420739 -> i960_output_ldconst , X2 , X3 , X4 }
      ~~~~~~    ^
PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /usr/lib/llvm-12/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj --mrelax-relocations -disable-free -disable-llvm-verifier -discard-value-names -main-file-name file_polyglot_012698.c -mrelocation-model static -mframe-pointer=none -fmath-errno -fno-rounding-math -mconstructor-aliases -munwind-tables -target-cpu x86-64 -tune-cpu generic -fno-split-dwarf-inlining -debugger-tuning=gdb -resource-dir /usr/lib/llvm-12/lib/clang/12.0.1 -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-12/lib/clang/12.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O2 -pedantic -w -fdebug-compilation-dir /home/user42/git/directed-compiler-fuzzing-code/scripts/set-5 -ferror-limit 19 -fgnuc-version=4.2.1 -fcolor-diagnostics -vectorize-loops -vectorize-slp -faddrsig -o /tmp/file_polyglot_012698-385474.o -x c file_polyglot_012698.c
1.	file_polyglot_012698.c:2:42: current parser token ','
#0 0x00007f0b219db001 llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a001)
#1 0x00007f0b219d9140 llvm::sys::RunSignalHandlers() (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd18140)
#2 0x00007f0b219db712 (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a712)
#3 0x00007f0b295f1980 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x12980)
#4 0x00007f0b2725bd07 clang::ASTContext::getAsArrayType(clang::QualType) const (/usr/lib/x86_64-linux-gnu/libclang-cpp.so.12+0xa1dd07)
#5 0x0000000001b7cd20 
clang: error: unable to execute command: Segmentation fault
clang: error: clang frontend command failed due to signal (use -v to see invocation)
Ubuntu clang version 12.0.1-++20211102090516+fed41342a82f-1~exp1~20211102211019.11
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang: note: diagnostic msg: /tmp/file_polyglot_012698-2a2b3a.c
clang: note: diagnostic msg: /tmp/file_polyglot_012698-2a2b3a.sh
clang: note: diagnostic msg: 

********************
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-5$ more file_polyglot_012698.c
enum X {
 X1 = 420739 -> i960_output_ldconst , X2 , X3 , X4 }
 ;
 static volatile enum X test = 0 ;
 static void y ( int ) ;
 int main ( ) {
 switch ( test ) {
 case 1 % 1 : main ( ) &= main ( ) % main ( ) ;
 case 63 : case sizeof ( int ) >= 1 : for ( ;
 test ;
 test ) ;
 return y ;
 }
 return 0 ;
 }
 static void y ( int x ) {
 abort ( ) ;
 }
 
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-5$ gcc file_polyglot_012698.c
file_polyglot_012698.c:2:14: error: invalid type argument of '->' (have 'int')
    2 |  X1 = 420739 -> i960_output_ldconst , X2 , X3 , X4 }
      |              ^~
file_polyglot_012698.c: In function 'main':
file_polyglot_012698.c:8:24: error: lvalue required as left operand of assignment
    8 |  case 1 % 1 : main ( ) &= main ( ) % main ( ) ;
      |                        ^~
file_polyglot_012698.c:12:9: warning: returning 'void (*)(int)' from a function with return type 'int' makes integer from pointer without a cast [-Wint-conversion]
   12 |  return y ;
      |         ^
file_polyglot_012698.c: In function 'y':
file_polyglot_012698.c:17:2: warning: implicit declaration of function 'abort' [-Wimplicit-function-declaration]
   17 |  abort ( ) ;
      |  ^~~~~
file_polyglot_012698.c:17:2: warning: incompatible implicit declaration of built-in function 'abort'
file_polyglot_012698.c:1:1: note: include '<stdlib.h>' or provide a declaration of 'abort'
  +++ |+#include <stdlib.h>
    1 | enum X {
